--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,12 @@
 body {
-  background-color: rgb(48, 47, 47);
+  background-color: #223843;
 }
+
+// #223843
+// #EFF1F3
+// #DBD3D8
+// #D8B4A0
+// #D77A61
+
+
+// https://coolors.co/palette/000000-14213d-fca311-e5e5e5-ffffff
