--- a/src/components/NavBar/NavBar.module.scss
+++ b/src/components/NavBar/NavBar.module.scss
@@ -1,7 +1,7 @@
 .navbar {
     display: flex;
     flex-direction: column;
-    background-color: #EFF1F3;
+    background-color: #D8B4A0;
     padding: 1rem;
 }
 
@@ -21,7 +21,7 @@
     &:hover {
         color: rgb(173, 25, 25);
         text-decoration: underline;
-        text-underline-offset: 5px;
+        text-underline-offset:15px;
     }
 }
 
