--- a/src/App.scss
+++ b/src/App.scss
@@ -1,16 +1,12 @@
+@import url('https://fonts.cdnfonts.com/css/lt-binary-neue');
 body {
-  background-color: #223843;
   height: 100vh;
   width: 100vw;
+  background-color: #003049;
+  font-family: 'LT Binary Neue', sans-serif;
 }
 
 
-
-// #223843
-// #EFF1F3
-// #DBD3D8
-// #D8B4A0
-// #D77A61
 
 
 // https://coolors.co/palette/000000-14213d-fca311-e5e5e5-ffffff
