--- a/src/pages/LandingPage/LandingPage.module.scss
+++ b/src/pages/LandingPage/LandingPage.module.scss
@@ -1,3 +1,4 @@
+@import url('https://fonts.cdnfonts.com/css/futuristic-armour');
 .mainBody {
     display: flex;
     align-items: center;
@@ -6,16 +7,20 @@
 }
 
 .headerBox {
-    background-color:#D8B4A0;
+    background-color:#471417;
     height : 35vh;
     width: 50vw;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    border: 2px solid white;
+    color: white;
+    font-family: 'Futuristic Armour', sans-serif;
 }
 
 .mainHeader {
     font-size: 2.5rem;
+    
 }
 
