--- a/src/containers/Modal/Modal.module.scss
+++ b/src/containers/Modal/Modal.module.scss
@@ -17,7 +17,7 @@
   width: 50vw;
   position: fixed;
   top: 10rem;
-  background-color: #5a4b40;
+  background-color: #FDF0D5;
   border: none;
   border-radius: 60px;
   border: 4px solid white;
@@ -29,7 +29,7 @@
   width: 70vw;
   position: fixed;
   top: 10rem;
-  background-color: #5a4b40;
+  background-color: #FDF0D5;
   border: none;
   border-radius: 60px;
   border: 4px solid white;
@@ -41,11 +41,14 @@
   width: 70rem;
   position: fixed;
   top: 5rem;
-  background-color: #5a4b40;
+  background-color: #FDF0D5;
   border: none;
   border-radius: 60px;
   border: 4px solid white;
   z-index: 2;
+  display: flex;
+  // justify-content: center;
+  align-items: center;
 
 }
 
